# olfactometer

./: .custom_build_dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  TODO.txt  Vagrantfile  docker_build.sh  example.yaml  olf.options  olf.proto  olfactometer.py  pyproject.toml  requirements.txt  setup.py  setup_arduino-cli.sh  test_requirements.txt  upload.py  wishlist.txt
examples/: example.yaml  flow_steps.yaml
firmware/olfactometer/: olfactometer.ino
olfactometer/: __init__.py  cli_entry_points.py  config_io.py  flow.py  olf.options  olf.proto  olf.py  olfactometer.py  upload.py  util.py  validation.py
olfactometer/firmware/olfactometer/: olfactometer.ino
olfactometer/generators/: TODO.txt  basic.py  common.py  pair_concentration_grid.py
scripts/: install_18.04_deps.sh  olf  olf-upload  olf-version-str  test_board_compat.py
tests/: .gitignore  test.py  test_load.py  write_test_files.py
